# chivalryII

./: .gitignore  .npmrc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: .npmrc  Cargo.toml  README.md  build.rs  index.d.ts  package.json  tsconfig.json
apps/desktop/.cargo/: config.toml
apps/desktop/src/: lib.rs
apps/desktop/tests/: dev-run.ts
apps/desktop/ts/: index.ts  types.ts
apps/pc/: Cargo.toml  README.md
apps/pc/src/: main.rs
apps/pc/src/config/: mod.rs
apps/pc/src/config/debug/: game_settings.json
apps/pc/src/config/dev/: game_settings.json
apps/pc/src/events/: input.rs  mod.rs  network.rs  window.rs
apps/pc/src/logging/: config.rs  logger.rs  mod.rs
apps/pc/src/plugins/: core_game_plugin.rs  game_plugin_manager.rs  logging_plugin.rs  mod.rs  splash_plugin.rs
apps/pc/src/prefabs/ui/: handle_text_input.rs  input_box.rs  mod.rs
apps/pc/src/prefabs/ui/login/: login_button.rs  login_form.rs  mod.rs
apps/pc/src/resources/: game_state.rs  input_state.rs  mod.rs
apps/pc/src/scenes/splash/: components.rs  debug_entities.rs  mod.rs  resources.rs  systems.rs
apps/pc/src/systems/: mod.rs
apps/pc/src/systems/animation/: text.rs
apps/pc/src/systems/camera/: mod.rs  scroll.rs  update_background_fade.rs  update_camera_scroll.rs  update_text_fade.rs
apps/pc/src/world/: mod.rs
apps/pc/src/world/chunk/: chunk_loader.rs  chunk_manager.rs  mod.rs  render.rs  systems.rs
apps/pc/src/world/entity/: character.rs  mod.rs  npc.rs  player.rs
apps/pc/src/world/map/: assets.rs  effect.rs  environment.rs  manager.rs  map_generator.rs  map_noise.rs  map_rules.rs  mod.rs  systems.rs  world_config.rs
apps/pc/src/world/map/area/: area.rs  building.rs  mod.rs  scene.rs  spatial.rs  special.rs  terrain.rs
apps/pc/src/world/map/climate/: climate.rs  climate_params.rs  mod.rs  season.rs  system.rs  zone.rs
apps/pc/src/world/map/npc/: behavior.rs  dialogue.rs  mod.rs  npc.rs  npc_type.rs
apps/pc/src/world/map/quest/: condition.rs  effect.rs  mod.rs  quest.rs  reward.rs  trigger.rs
apps/pc/src/world/map/tile/: mod.rs  physics.rs  properties.rs  render.rs  tile.rs  tile_type.rs  util.rs
apps/pc/src/world/map/vegetation/: density.rs  mod.rs  rule.rs  system.rs  vegetation.rs  vegetation_type.rs
apps/pc/src/world/map/water/: lake.rs  mod.rs  river.rs  water.rs  waterfall.rs  (+1 more)
(+11 files in other folders)
