[package]
name = "mmorpg-game"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A 2.5D MMORPG game built with Bevy"

[dependencies]
bevy = { version = "0.15", features = ["dynamic_linking"] }
bevy_asset_loader = "0.18"
bevy_rapier3d = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures-lite = "1.13.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
rand = "0.8"
clap = { version = "4.5.31", features = ["derive"]}

[workspace]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1


